get courses for degree
