# package/src/swagger_server/controllers/bigchaindb_API_functions.py
@@ -1,7 +1,7 @@
 from .creation_functions import _component_weighting_equal_one, _create
 from .getter_functions import (_get_all_assets, _get_asset_by_id,
                                _get_assets_by_key, _get_assets_by_university,
-                               _get_marks_by_address)
+                               _get_marks_by_address, _get_courses_by_degree)
 from .global_vars import ADMIN
 from .update_functions import (_course_add_requisite, _course_delete_requisite,
                                _degree_append_courses, _degree_delete_course,
@@ -84,3 +84,6 @@ def course_get_by_id(id, meta_flag):
 
 def get_marks_by_course_id(id):
     return _get_assets_by_key('mark', 'course_id', id, True)
+
+def degree_get_courses(id, meta_flag):
+    return _get_courses_by_degree(id, meta_flag)
